@@ -1,6 +1,6 @@
 <!--
  * vinagre-ui.xml
- * This file is part of gedit
+ * This file is part of vinagre
  *
  * Copyright (C) 2007 - Jonh Wendell <wendell@bani.com.br>
  *
@@ -27,8 +27,9 @@
       <menuitem name="MachineConnectMenu" action="MachineConnect"/>
       <separator/>
       <menuitem name="MachineCloseMenu" action="MachineClose"/>
-      <menuitem name="MachineCloseAllMenu" action="MachineCloseAll"/>
+      <menuitem name="MachineTakeScreenshotMenu" action="MachineTakeScreenshot"/>
       <separator/>
+      <menuitem name="MachineCloseAllMenu" action="MachineCloseAll"/>
       <menuitem name="MachineQuitMenu" action="MachineQuit"/>
     </menu>
 
@@ -64,8 +65,9 @@
 
   <toolbar name="ToolBar">
     <toolitem action="MachineConnect"/>
-    <toolitem action="MachineClose"/>
     <separator/>
+    <toolitem action="MachineClose"/>
+    <toolitem action="MachineTakeScreenshot"/>
     <toolitem action="ViewFullScreen"/>
   </toolbar>
 
