@@ -74,6 +74,8 @@ void		  vinagre_tab_set_title		(VinagreTab *tab,
 void		  vinagre_tab_set_notebook	(VinagreTab *tab,
 						 VinagreNotebook *nb);
 VinagreNotebook   *vinagre_tab_get_notebook	(VinagreTab *tab);
+
+void		  vinagre_tab_take_screenshot	(VinagreTab *tab);
 G_END_DECLS
 
 #endif  /* __VINAGRE_TAB_H__  */
