@@ -1,3 +1,12 @@
+2007-09-36  Jonh Wendell  <jwendell@gnome.org>
+
+	* src/vinagre-tab.[hc]
+	* src/vinagre-commands.[hc]
+	* src/vinagre-window.c
+	* src/vinagre-ui.h
+	* data/vinagre-ui.xml:
+	  - Added "Take Screenshot" feature
+
 2007-08-31  Jonh Wendell  <jwendell@gnome.org>
 
 	* lots of files:
